@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>sakai-standard-tool</artifactId>
-        <groupId>org.sakaiproject.purepoms</groupId>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>master</artifactId>
         <version>2.9-SNAPSHOT</version>
     </parent>
 
@@ -33,9 +33,6 @@
         <fop.version>1.0</fop.version>
         <poi.version>3.7</poi.version>
         <jfreechart.version>1.0.5</jfreechart.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.sakai-mock.version>2.9-SNAPSHOT</sakai.sakai-mock.version>
-        <sakai.scheduler.version>2.9-SNAPSHOT</sakai.scheduler.version>
         <sst.wicket.version>1.4.9</sst.wicket.version>
         <sst.slf4j.version>1.4.3</sst.slf4j.version>
     </properties>
@@ -133,67 +130,7 @@
     </distributionManagement>
     
     <!-- Project repositories -->
-	<pluginRepositories>
-        <pluginRepository>
-            <id>maven2-central-repo</id>
-            <name>Maven2 Central Repo</name>
-            <url>http://repo1.maven.org/maven2/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>Sakai Plugin Repo</id>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
-    
     <repositories>
-        <repository>
-            <id>sakai-maven2</id>
-            <name>Sakai Maven Repository</name>
-            <layout>default</layout>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>sakai-maven2-snapshots</id>
-            <name>Sakai Maven Repo Snapshots</name>
-            <layout>default</layout>
-            <url>http://source.sakaiproject.org/maven2-snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>default</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
         <repository>
             <id>jboss</id>
             <name>Jboss Repository for Maven</name>
@@ -257,52 +194,32 @@
         <dependencies>
             <!-- SiteStats -->
             <dependency>
-                <groupId>org.sakaiproject.sitestats</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>sitestats-api</artifactId>
                 <version>${project.version}</version>
                 <type>jar</type>
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>org.sakaiproject.sitestats</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>sitestats-bundle</artifactId>
                 <version>${project.version}</version>
                 <type>jar</type>
             </dependency>
             <dependency>
-                <groupId>org.sakaiproject.sitestats</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>sitestats-impl</artifactId>
                 <version>${project.version}</version>
                 <type>jar</type>
             </dependency>
             <dependency>
-                <groupId>org.sakaiproject.sitestats</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>sitestats-impl-hib</artifactId>
                 <version>${project.version}</version>
                 <type>jar</type>
                 <scope>provided</scope>
             </dependency>
             
-            <!-- Sakai other -->
-            <dependency>
-                <groupId>org.sakaiproject.mock</groupId>
-                <artifactId>sakai-mock</artifactId>
-                <version>${sakai.sakai-mock.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.scheduler</groupId>
-                <artifactId>scheduler-api</artifactId>
-                <version>${sakai.scheduler.version}</version>
-                <type>jar</type>
-                <scope>provided</scope>
-            </dependency>
-			<dependency>
-                <groupId>org.sakaiproject.scheduler</groupId>
-                <artifactId>scheduler-component-shared</artifactId>
-                <version>${sakai.scheduler.version}</version>
-                <type>jar</type>
-                <scope>provided</scope>
-            </dependency>
             <!-- Apache Commons -->
             <dependency>
                 <groupId>commons-digester</groupId>
@@ -493,48 +410,11 @@
             -->
         </plugins>
         
-        <extensions>
-            <!-- Enabling the use of external ssh -->
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh-external</artifactId>
-                <version>2.0</version>
-            </extension>
-        </extensions>
     </build>
 
     <!-- Reporting (mvn site) -->
     <reporting>
         <plugins>
-            <!-- JavaDocs: mvn javadoc:javadoc -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
-                <reportSets>
-                  <reportSet>
-                    <id>aggregate</id>
-                    <configuration>
-                      <aggregate>true</aggregate>
-            		      <source>1.5</source>
-                      <encoding>UTF-8</encoding>
-	                    <links>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
-                        <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
-                      </links>
-                      <breakiterator>true</breakiterator>
-                      <verbose>false</verbose>
-                      <maxmemory>512m</maxmemory>
-                      <additionalJOption>
-                        -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
-                      </additionalJOption>
-                    </configuration>
-                    <reports>
-                      <report>aggregate</report>
-                    </reports>
-                  </reportSet>
-                </reportSets>   
-            </plugin>
             <!-- FindBugs: mvn findbugs:findbugs -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
